--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@ body
 }
 .top
 {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     height: 250px;
-    background-color: black;
+    background-color: rgb(5, 5, 5);
     margin: 0;
 }
 .photo
@@ -21,9 +24,11 @@ body
     background-size: contain;
     background-size: cover;
     background-image: url(photo.jpg);
+    border: 5px solid white;
     border-radius: 50%;
     margin-top: 20px;
     margin-left: 50px;
+    
 }
 .menu
 {
@@ -51,4 +56,33 @@ span.point
 {
     width: 20px;
     height: 20px;
+}
+.bio
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 500px;
+    padding-left: 80px;
+}
+.line1, .line2, .line3
+{
+    color:white;
+    height: 40px;
+    font-family: "century gothic";
+}
+.line1
+{
+    font-size: 25px;
+}
+.line3
+{
+    color: rgb(192, 190, 190);
+}
+.line4
+{
+    text-decoration: underline;
+    color: rgb(192, 190, 190);
+    font-size: 14px;
+    font-family: "century gothic";
 }
