--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,31 @@ span.point
 .line4
 {
     text-decoration: underline;
-    color: rgb(192, 190, 190);
+    color: rgb(223, 219, 219);
     font-size: 14px;
     font-family: "century gothic";
+}
+.invisible
+{
+    display: none;
+}
+.contacts
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 50px;
+    background-color: rgb(223, 223, 223);
+}
+.contact
+{
+    color:black;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "century gothic";
+}
+.contact_icon
+{
+    height:40px;
 }
