--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ span.point
     background-image: url(car-background-trial.jpg);
     background-size: cover;
     margin-top:50px;
+    padding-bottom: 3%;
     height: 600px;
 }
 .transport_caption
@@ -235,7 +236,7 @@ span.point
 }
 .apply
 {
-    background-color: rgb(37, 201, 45); /* Green */
+    background-color: rgb(28, 182, 36); /* Green */
     border: none;
     color: white;
     margin-top: 5%;
@@ -247,4 +248,25 @@ span.point
     font-size: 16px;
     font-family: "century gothic";
     border-radius: 12px;
+}
+.tech_as_caption
+{
+    text-align: center;
+    padding-top: 8px;
+    font-family: "century gothic";
+    background-color:rgba(255, 255, 255, 0.4) ; 
+    height: 40px;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+}
+.tech_assistance_block
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* align-items: baseline; */
+    background-image: url(tech-assistance-trial.jpg);
+    background-size: cover;
+    /* margin-top:50px; */
+    height: 600px;
 }
