--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ span.point
 }
 .apply
 {
-    background-color: rgb(28, 182, 36); /* Green */
+    background-color: rgb(32, 130, 42); 
     border: none;
     color: white;
     margin-top: 5%;
@@ -263,10 +263,231 @@ span.point
 {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    /* align-items: baseline; */
-    background-image: url(tech-assistance-trial.jpg);
+    background-image: url(tech-assistance-trial2.jpg);
     background-size: cover;
-    /* margin-top:50px; */
-    height: 600px;
+    padding-bottom: 40px;
+    /* height: 1000px; */
+}
+.tech_info_lines
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 95%;
+    height: 15%;
+    padding-left: 5%
+}
+.tech_info_line
+{
+    font-family: "century gothic";
+    color:white;
+    padding-left: 5%;
+    
+}
+.split_line
+{
+    text-align: center;
+    font-family: "century gothic";
+    height: 20px;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.tech_paragraph
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
+}
+.tech_paragraph_text
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.tech_paragraph_columns
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.tech_paragraph_column
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 40%;
+}
+.tech_paragraph_text_line
+{
+    font-family: "century gothic";
+    color:white;
+    text-align: inherit;
+    font-size: 95%;
+}
+.apply-tech
+{
+    background-color: rgb(28, 182, 36); /* Green */
+    border: none;
+    color: white;
+    margin-top: 2%;
+    width: 40%;
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "century gothic";
+    border-radius: 12px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.domestic_property_block
+{
+    background-image: url(home-trial.jpg);
+    background-size: cover;
+    padding-bottom: 30px;
+   
+}
+.domestic_caption
+{
+    text-align: center;
+    padding-top: 8px;
+    font-family: "century gothic";
+    background-color:rgba(255, 255, 255, 0.4) ; 
+    height: 40px;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+}
+.domestic_info_caption
+{
+    font-size: 150%;
+    color: white;
+    font-family: "century gothic";
+    margin-left: 5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+.domestic_info_block
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height:25%;
+}
+.domestic_info_list
+{
+    margin-left: 2%;
+    width: 35%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.domestic_info_line
+{
+    font-family: "century gothic";
+    color:white;
+    font-size: 95%;
+}
+.apply-domestic
+{
+    background-color: rgb(28, 182, 36); /* Green */
+    border: none;
+    color: white;
+    /* height: 3%; */
+    padding: 10px 22px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: "century gothic";
+    border-radius: 12px;
+    /* margin-right: auto;
+    margin-left: auto; */
+    margin: auto;
+}
+/* ------------------------------------------------------------------------ */
+.healthcare-block
+{
+    background-image: url(healthcare-trial.jpg);
+    background-size: cover;
+    height: 700px;
+}
+.healthcare_caption
+{
+    text-align: center;
+    padding-top: 8px;
+    font-family: "century gothic";
+    background-color:rgba(88, 214, 129, 0.6) ; 
+    height: 40px;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+}
+.healthcare_info_lines 
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 95%;
+    height: 25%;
+    padding-left: 5%;
+}
+.healthcare_info_line
+{
+    font-family: "century gothic";
+    color: white;
+    text-align: left;
+}
+.health_table_block
+{
+    display: flex;
+    justify-content: center;
+}
+.health_table
+{
+    width: 90%;
+    background-color: rgba(248, 255, 246, 0.76);
+    padding: 0;
+    border: 1px solid green;
+}
+.tab_header
+{
+    background-color: rgb(16, 180, 16);
+    color: white;
+    text-align: center;
+    font-family: "century gothic";
+}
+.col1
+{
+    width: 20%;
+    font-weight: bold;
+    text-align: center;
+}
+/* ------------------------------------------------------- */
+.comments
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form_section
+{
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 5px;
+}
+form
+{
+    display:flex;
+    flex-direction:column;
 }
